--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 
   gtag('config', 'AW-16904165577');
 </script>
+  <!-- Google tag (gtag.js) event -->
+<script>
+  gtag('event', 'ads_conversion_Adicionar_ao_carrinho_1', {
+    // <event_parameters>
+  });
+</script>
+
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -314,4 +321,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
